# multiagent-pathplanning

./: .gitignore  Cargo.toml  INSTALLATION.md  LICENSE  ORCA_PRD.md  PRD.md  QUICKSTART.md  README.md  benchmark.py  pyproject.toml  requirements.txt  run_headless.py  setup.py  test_basic_import.py
.github/workflows/: ci.yml
docs/: ORCA_PRD.md  PRD.md
scenarios/: 4_agents_crossing.json  circle_12_agents.json  complex_maze.json  simple_2_agents.json
simulation/: __init__.py  run_simulation.py  scenario_loader.py  simulator.py  visualizer.py
src/: astar.rs  cbs.rs  lib.rs  orca.rs  orca_correct.rs  orca_simple.rs  structs.rs
tests/: test_basic_functionality.py  test_python_layer.py  test_structure.py
