[package]
name = "navigation_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "navigation_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
priority-queue = "1.3"
ordered-float = "4.0"
nalgebra = "0.33"
osqp = "1.0"

[dev-dependencies]
approx = "0.5"