[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "navigation_core"
version = "0.1.0"
description = "High-performance multi-robot navigation with CBS and ORCA"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
